[package]
name = "ts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
array-macro = "2.1.8"
closure = "0.3.0"
crossbeam-channel = "0.5.12"
derive_more = "0.99.17"
once_cell = "1.19.0"
ordered-float = "4.2.0"
ustr = "1.0.0"
